--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -13,7 +13,7 @@
                 <h1>Industrial Pollution</h1>
             </div>
         </section>
-        <h2>Strategies to reduce Industrial Pollution in {{name}}</h2>
+        <h2>Strategies to reduce Industrial Pollution</h2>
         <p>1. Cleaner Production Technologies:
             Adopt technologies that reduce or eliminate the use of hazardous substances in manufacturing processes.
             Code/Standard: Best Available Techniques (BAT) as defined by the Industrial Emissions Directive (IED) in the European Union.
@@ -36,7 +36,7 @@
                 <h1>Urban Pollution</h1>
             </div>
         </section>
-        <h2>Strategies to reduce pollution due to traffic and constructional activities in {{name}}</h2>
+        <h2>Strategies to reduce pollution due to traffic and constructional activities</h2>
         <p>1. Promotion of Alternative Fuels: Encourage the use of alternative fuels such as compressed natural gas (CNG), liquefied natural gas (LNG), and biofuels.
             Code/Standard: Standards and regulations specifying the acceptable use and quality of alternative fuels.
             </p>
@@ -58,7 +58,7 @@
                     <h1>Marine Pollution</h1>
                 </div>
             </section>
-            <h2>Strategies to reduce marine pollution in {{name}}</h2>
+            <h2>Strategies to reduce marine pollution</h2>
             <p>1. International Maritime Organization (IMO) Regulations:
                 Implement and adhere to IMO regulations that address various sources of marine pollution, including oil spills, sewage, and harmful substances.
                 Code/Standard: MARPOL (International Convention for the Prevention of Pollution from Ships) sets out regulations for the prevention of pollution from ships.
@@ -82,7 +82,7 @@
                         <h1>Agricultural Pollution</h1>
                     </div>
                 </section>
-                <h2>Strategies to reduce agricultural pollution in {{name}}</h2>
+                <h2>Strategies to reduce agricultural pollution</h2>
                 <p>Precision Agriculture:
                      Employ precision farming techniques to optimize resource use, reduce runoff, and minimize environmental impact.
                     Code/Standard: No specific code, but precision agriculture practices align with sustainable farming guidelines promoted by organizations like the Sustainable Agriculture Research and Education (SARE).
